objects/Extended_Profile_List_Item__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to an Account object&apos;s record. As per MDCP Data Model, this custom objects implements a generic list of atrtibutes for an Account record of type Organization or Business Relationship.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Extended Profile List Items</relationshipLabel>
        <relationshipName>Extended_Profile_List_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Area_Group__c</fullName>
        <description>Business Area Group of an Extended Profile List Item.</description>
        <label>Business Area Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Effective Date of an Extended Profile List Item. The Item has validity starting from this Date.</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <description>Expiry Date of an Extended Profile List Item. The Item has validity up to this Date.</description>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Item_Effective_Date__c</fullName>
        <label>Item Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Item_Expiry_Date__c</fullName>
        <label>Item Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to a Location object&apos;s record. As per MDCP Data Model, this custom objects implements a generic list of atrtibutes for a Location record.</description>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Extended Profile List Items</relationshipLabel>
        <relationshipName>Extended_Profile_List_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MDCP_Active__c</fullName>
        <description>The field provides an indication whether this record is still current or has been inactivated (logically deleted) in the MDCP source system.</description>
        <label>MDCP Active</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MDCP_Extended_Profile_List_Item_ID__c</fullName>
        <label>MDCP Extended Profile List Item ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of an Extended Profile List Item by role (Customer, Partner, All). Organization, Site, Business Relationship, Business relationship Item, Sell Into Market.</description>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Userkey__c</fullName>
        <description>Extended Profile List Item unique key.</description>
        <externalId>true</externalId>
        <label>Userkey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Extended Profile List Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>Location__c</columns>
        <columns>NAME</columns>
        <columns>Business_Area_Group__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiry_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Extended Profile List Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Extended Profile List Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>